ISTIO/svc-zoneprinter-1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zoneprinter-1
  name: zoneprinter-1
spec:
  ports:
  - port: 8080
  selector:
    app: zoneprinter-1
