ISTIO/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zoneprinter-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - zoneprinter-gateway
  http:
  - route:
    - destination:
        host: zoneprinter-1
